[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecutils"
description = "Elliptic Curve Utils"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT License"}
keywords = ["ecutils", "ec", "ecdh", "eck", "ecdsa", "ecmo"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
authors = [
  {name = "Isak Paulo de Andrade Ruas", email = "isakruas@gmail.com"},
  {name = "Celimar Reijane Alves Damasceno Paiva", email = "celimar.damasceno@ifnmg.edu.br"},
  {name = "Fernando Marcos Souza Silva", email = "fernando.silva@ifnmg.edu.br"},
]
maintainers = [
  {name = "Isak Paulo de Andrade Ruas", email = "isakruas@gmail.com"}
]
requires-python = ">=3.8"
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://ecutils.readthedocs.io/en/latest/"
Documentation = "https://ecutils.readthedocs.io/en/latest/"
Repository = "https://github.com/isakruas/ecutils.git"
"Bug Tracker" = "https://github.com/isakruas/ecutils/issues"
Changelog = "https://github.com/isakruas/ecutils/blob/master/CHANGELOG.md"

[tool.hatch.package]
source-dir = "src"

[tool.hatch.version]
path = "src/ecutils/__init__.py"