[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecutils"
description = "Elliptic Curve Utils"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
keywords = ["ecutils", "ec", "ecdh", "eck", "ecdsa", "ecmo"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Development Status :: 6 - Mature",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Build Tools",
  "Natural Language :: English",
]
authors = [
  {name = "Isak Paulo de Andrade Ruas", email = "isakruas@gmail.com"},
  {name = "Celimar Reijane Alves Damasceno Paiva", email = "celimar.damasceno@ifnmg.edu.br"},
  {name = "Fernando Marcos Souza Silva", email = "fernando.silva@ifnmg.edu.br"},
]
maintainers = [
  {name = "Isak Paulo de Andrade Ruas", email = "isakruas@gmail.com"}
]
requires-python = ">=3.9"
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://ecutils.readthedocs.io/en/stable/"
Documentation = "https://ecutils.readthedocs.io/en/stable/"
Repository = "https://github.com/isakruas/ecutils.git"
"Bug Tracker" = "https://github.com/isakruas/ecutils/issues"
Changelog = "https://github.com/isakruas/ecutils/blob/master/CHANGELOG.md"

[tool.hatch.package]
source-dir = "src"

[tool.hatch.version]
path = "src/ecutils/__init__.py"